--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# macbook
+
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -10,7 +14,8 @@ config/reference.yaml
 .snakemake
 output/*
 ref/*
-
+input/*
+logs/*
 
 # C extensions
 *.so
